[package]
name = "workspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
        "engine",
        "game_1",
        "game_2",
]

[dependencies]
vulkano = "0.27.1"
vulkano-shaders = "0.27.1"
winit = "0.25"
vulkano-win = "0.27.1"
png = "0.17"
json = "*"
image = "0.22"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
